22-Jul-2020  - V0.73 Adjust api nomenclature
22-Jul-2020  - V0.74 Create destination directory for tarfile unbundling
 1-Aug-2020  - V0.75 Add https protocol StashUtil.fetchBundle()
24-Aug-2020  - V0.76 Add module ProcessStatusUtil() and related tests.
19-Oct-2020  - V0.77 Adjust troubleshooting logging
26-Oct-2020  - V0.78 down version numpy to 1.18.0 to solve Py3.9 macos issue
26-Oct-2020  - V0.79 handle Py27 numpy limit in requirements
 2-Nov-2020  - V0.80 add gzip support to json deserialization method.
 9-Nov-2020  - V0.81 add zip unbundle method to FileUtil()
 9-Nov-2020  - V0.82 add stdin option in ExecUtil().run()
23-Nov-2020  - V0.83 add option to turn on SSL verification in requests() package
23-Nov-2020  - V0.84 add option to restore SSL3 ciphers to urlopen connections
24-Nov-2020  - V0.85 disable uniprot tests for now until cert/handshake issues to work with Ubuntu 20.20
 1-Dec-2020  - V0.86 add tagged Fasta comment style and option to synthesize fasta comments
 1-Dec-2020  - V0.87 adjust documemtation and upversion
 1-Dec-2020  - V0.88 update dependencies and pipeline
 1-Dec-2020  - V0.89 further output options for fasta files
 1-Dec-2020  - V0.90 Cast to string all components of fasta comment lines
 5-Dec-2020  - V0.91 Wrapped requests.Session() in a context manager.
 7-Dec-2020  - V0.92 Update diagnostics logging in ExecUtils()
13-Dec-2020  - V0.93 Add runShell() method to ExecUtils()
14-Dec-2020  - V0.94 Add option to suppress stderr output in ExecUtils()
28-Dec-2020  - V0.95 Catch empty directory in mkdirForFile()
20-Jan-2021  - V0.96 Adding IndexUtils() as a potentially temporary placement for this module.
24-Jan-2021  - V0.97 Update error logging in ExecUtils(), add sort() method to IndexBase()
29-Jan-2021  - V0.98 Update numpy/mmcif dependencies
29-Jan-2021  - V0.99 Documentation and installation adjustments
26-Feb-2021  - V1.00 Change pickle.HIGHEST_PROTOCOL to pickle.DEFAULT_PROTOCOL
10-Mar-2021  - V1.01 Add noRetry argument to FileUtil.get()